@@ -3,6 +3,11 @@ dpf-ax changelog
 	by <hackfin@section5.ch>
 	Find details in the git or svn logs.
 
+Thu, 03 Jan 2013
+       by superelchi
+       * New model:
+	 - linkdelight_5 (thx LUISE)
+
 Fri, 07 Dec 2012
        by superelchi
        * New model:
